--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>contador</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body id="body">
 <h1>contador</h1>  
